<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- 爱品图专属文字 -->
	<string name="slogan">爱品图，随时随地发现创意！</string>
	<string name="app_name">爱品图</string>
	<string name="isOriginal">是否原创</string>
	<string name="description">添加图画描述</string>
	<string name="tags">添加多个标签用空格分隔</string>
	<string name="writestory">添加对图画的评价或者微小说</string>
	<string name="writecomnt">添加对图画的评论</string>
	<string name="about_introduce">
		爱品图是一个为插画、动漫、平面艺术家以及广大手绘爱好者提供创意分享和交流的
		移动互联网应用，通过该应用大家可以展示自己的作品，对他人作品进行点评，从而
		结识更多优秀的同仁并提升自己的创造力；
	</string>
	<string name="about_developers">
		\n北京远博畅享科技有限公司出品\n
	</string>
	
	<!-- 帮助内容 -->
	<string name="helpcontent">目前没有帮助内容，如有疑问请在：
	    首页画廊>>俺滴>>消息中，给客服小辣椒发消息获得帮助</string>    
	
	<!-- 对话框 -->
	<string name="note">提示</string>
	<string name="suretologout">确实要注销吗?</string>
	<string name="suretosave">确实要保存该图吗?</string>
	<string name="yes">确定</string>
	<string name="cancel">取消</string>
	<string name="newversion">下载最新版本</string>
	<string name="backgrounddnld">进入后台下载</string>
	<string name="dnldover">更新包下载完成，可以安装了</string>
	
	<!-- 画廊主菜单 -->
	<string name="postpic">贴图</string>
	<string name="hotpic">热图</string>
	<string name="community">达人</string>
	<string name="hottags">标签</string>
	<string name="mine">俺滴</string>

	<!-- 贴图详情主菜单 -->
	<string name="like">喜欢</string>
	<string name="comment">评论</string>
	<string name="browsetxt">浏览</string>
	<string name="favorite">收藏</string>
	<string name="forward">转发</string>
	<string name="purchase">购买</string>
	<string name="report">举报</string>
	<string name="save">保存图片</string>
	<string name="level_zh">级别</string>
	<string name="score_zh">积分</string>
	<string name="original">原创</string>
	<string name="notoriginal">非原创</string>
	<string name="picfrom">来自</string>
	<string name="peoplelike">人喜欢</string>
	<string name="browsenum">人浏览</string>
	<string name="none">无</string>

	<!-- 页面Title -->
	<string name="gallery">首页画廊</string>
	<string name="picdetails">贴图详情</string>
	<string name="storylist">品图列表</string>
	<string name="commentlist">评论列表</string>
	<string name="hotpicsview">热图浏览</string>
	<string name="about">关于爱品图</string>
	<string name="tagtitle">热门标签</string>	

	<!-- 切换按钮文字 -->
	<string name="todayhotpic">今日热图</string>
	<string name="historyclassic">经典作品</string>
	<string name="xuetang">品图学堂</string>
	<string name="event">社区事件</string>
	<string name="picdaren">创作达人</string>
	<string name="cmtdaren">评论达人</string>
	<string name="industry">行业动态</string>
	<string name="marketshopping">可购商品</string>
	<string name="marketnote">张贴便条</string>
	<string name="baseinfo">基本资料</string>
	<string name="tadipic">他的贴图</string>
	<string name="assets">资产</string>
	<string name="picutues">贴图</string>
	<string name="pintu">品图</string>
	<string name="messages">消息</string>

	<!-- 我的资产页面文字 -->
	<string name="userlevel">等级</string>
	<string name="totalscore">总积分</string>
	<string name="excgscore">可用积分</string>
	<string name="picnum">贴图数</string>
	<string name="storynum">评论数</string>
	<string name="shellunit">个</string>

	<!-- 专属提示 -->
	<string name="comment_length_note">
		您已经达到了评论的最大长度32，如果继续，建议发表到品图内容中
	</string>
	<string name="marksuccess">收藏成功</string>
	<string name="shake_toget_random">没有新图片了，摇摇手机试试？</string>
	<string name="have_a_rest">没有新图片了，休息会儿吧</string>
	<string name="report_thanks">感谢您的举报，我们会及时处理</string>
	<string name="img_saved">图片保存在：</string>
	<string name="vote_notallowed">不能自恋哦</string>
	<!-- 首页提示 -->
	<string name="network_ungeilivable">网络不给力啊，晚点再看吧？</string>
	<string name="two_sec_refresh">2秒后再刷新</string>
	<string name="ten_sec_refresh">10秒后再刷新</string>
	<string name="shake_arrive_max">不要再晃了，好头晕</string>

	<!-- 通知提示 -->
	<string name="youhave">你有</string>
	<string name="notification">通知</string>

	<!-- 编辑消息页面 -->
	<string name="receiver">收信人</string>
	<string name="kefu_xiaolajiao">收信人：客服小辣椒</string>
	<string name="msg_content">消息内容</string>
	<string name="msg_send_success">消息发送成功</string>
	<string name="clear_all">清除全部文字吗?</string>

	<!-- 状态条提示 -->
	<string name="page_status_refreshing">正在获取...</string>
	<string name="page_status_updating">正在发送...</string>
	<string name="page_status_compressing">正在压缩图片...</string>
	<string name="page_status_deleting">正在删除...</string>
	<string name="page_status_update_success">发送成功.</string>
	<string name="page_status_unable_to_update">不好意思服务暂不可用</string>
	<string name="page_status_timeout">网络超时.</string>
	<string name="page_status_same_page">您正在此页.</string>
	<string name="page_dm_texting_is_null">请输入私信内容.</string>
	<string name="page_text_is_null">内容不能为空.</string>
	<string name="page_dm_user_is_null">请输入收信人.</string>
	<string name="page_is_the_person_following_you">无法发送私信，通过客户端只能给互相关注的人发私信。</string>
	<!-- 错误提示 -->
	<string name="json_parse_error">数据解析出错</string>
	<string name="error_not_authorized">帐号验证失败，请重新登录.</string>
	<string name="error_server_down">服务器暂时无法响应.</string>
	<!-- 按钮提示 -->
	<string name="page_label_get_more">获取更多</string>
	<string name="page_label_go_back">返回</string>
	<string name="writemsg">撰写消息</string>
	<!-- options menu -->
	<string name="omenu_signout">注销</string>
	<string name="omenu_refresh">刷新</string>
	<string name="omenu_preferences">选项</string>
	<string name="omenu_settings">设置</string>
	<string name="omenu_search">搜索</string>
	<string name="omenu_about">关于</string>
	<string name="omenu_exit">退出</string>
	<string name="omenu_help">帮助</string>
	<!-- context menu -->
	<string name="cmenu_reply">回复</string>
	<string name="cmenu_retweet">热图</string>
	<string name="cmenu_direct_message">私信</string>
	<string name="cmenu_add_fav">收藏</string>
	<string name="cmenu_del_fav">取消收藏</string>
	<string name="cmenu_delete">删除</string>
	<string name="cmenu_share">分享</string>
	<string name="cmenu_clipboard">复制到剪贴板</string>
	<string name="cmenu_more">更多</string>
	<string name="cmenu_user_profile_prefix">的空间</string>
	<string name="cmenu_user_status">的消息</string>
	<string name="cmenu_user_addfriend_prefix">设置对</string>
	<string name="cmenu_user_friend_suffix">的关注</string>
	<string name="cmenu_user_delfriend_prefix">取消对</string>
	<string name="cmenu_user_send_prefix">给</string>
	<string name="cmenu_user_senddm_suffix">发私信</string>
	<string name="cmenu_user_sendmention_suffix">留言</string>
	<!-- Login页面 -->
	<string name="login_label_username">账号:</string>
	<string name="login_label_password">密码:</string>
	<string name="login_label_signin">登 录</string>
	<string name="login_status_logging_in">登录中...</string>
	<string name="login_status_null_username_or_password">帐号和密码不能为空。</string>
	<string name="login_not_email_format">非法邮箱账号</string>
	<string name="login_status_invalid_username">帐号不存在，请重新输入。</string>
	<string name="login_status_invalid__password">密码错误，请重新输入。</string>
	<string name="login_status_network_or_connection_error">网络错误，请稍后再试。</string>
	<string name="login_register_link">
		没有帐号？
		<a href="http://fanfou.com/register">注册</a>
	</string>
	<string name="login_status_failure">登录失败。</string>

	<string name="login_with_sina">绑定新浪微博账号</string>
	<string name="login_with_tx">绑定腾讯微博账号</string>

	<!-- Write页面 -->
	<string name="write_label_send">发送</string>
	<string name="write_label_send_hint">你在做什么？</string>
	<string name="write_label_choose_images">插入图片</string>
	<string name="write_label_send_in_background">后台发送</string>
	<string name="write_label_take_a_picture">相机拍摄</string>
	<string name="write_label_choose_a_picture">手机相册</string>
	<string name="write_label_insert_picture">插入图片</string>
	<string name="write_label_you_can_type_prefix">可以输入</string>
	<string name="write_label_you_can_type_suffix">字</string>
	<!-- 网络监测与设置 -->
	<string name="pref_title_network">网络</string>
	<string name="pref_network_type_title">网络类型</string>
	<string name="pref_network_type_cmnet">cmnet</string>
	<string name="pref_network_type_cmwap">cmwap</string>
	<string name="pref_network_type_3g">3G/wifi</string>
	<string name="pref_network_type_summary">选择当前网络的接入点或类型</string>
	<!-- 图片设置 -->
	<string name="pref_photo_preview_type_none">不显示</string>
	<!-- NOTE:缩略图尺寸在这里没有实用价值，在array.xml中被屏蔽 -->
	<string name="pref_photo_preview_type_thumbnail">缩略图尺寸</string>
	<string name="pref_photo_preview_type_middle">小尺寸</string>
	<string name="pref_photo_preview_type_original">大尺寸</string>
	<!-- 时间 -->
	<string name="tweet_created_at_beautify_prefix">大约</string>
	<string name="tweet_created_at_beautify_sec">秒</string>
	<string name="tweet_created_at_beautify_min">分钟</string>
	<string name="tweet_created_at_beautify_hour">小时</string>
	<string name="tweet_created_at_beautify_day">天</string>
	<string name="tweet_created_at_beautify_suffix">前</string>

</resources>
