<?xml version="1.0" encoding="utf-8"?>
<!-- 底部栏 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="50dp" android:padding="0dp"
	android:layout_alignParentBottom="true" android:background="@drawable/maintab_toolbar_bg">

	<TextView android:id="@+id/tv_comment" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		style="@style/footer_button" android:drawableTop="@drawable/detail_comment_edit"
		android:text="@string/comment" />
	<TextView android:id="@+id/tv_like" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		style="@style/footer_button" android:drawableTop="@drawable/heart_undo"
		android:text="@string/like" />
	<TextView android:id="@+id/tv_favorite" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		style="@style/footer_button" android:drawableTop="@drawable/detail_fav_highlight_normal"
		android:text="@string/favorite" />
	<TextView android:id="@+id/tv_forward" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		style="@style/footer_button" android:drawableTop="@drawable/detail_forward_selected"
		android:text="@string/forward" />
	<TextView android:id="@+id/tv_report" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		style="@style/footer_button" android:drawableTop="@drawable/detail_more_selected"
		android:text="@string/report" />

</LinearLayout>