<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent" android:gravity="center_horizontal"
	android:background="@color/body_background">

	<!-- HEADER -->
	<include layout="@layout/header_back" />
	<!-- LOGO -->
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginBottom="20dp">
		<ImageView android:id="@+id/ipintu_logo" android:src="@drawable/icon"
			android:layout_width="60dp" android:layout_height="60dp"
			android:layout_centerHorizontal="true" android:layout_marginTop="25dp" />
		<TextView android:id="@+id/version" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_below="@id/ipintu_logo"
			android:layout_centerHorizontal="true" android:layout_marginBottom="15dp"
			android:layout_marginTop="10dp" android:text="version info" style="@style/normalText" />
	</RelativeLayout>

	<!-- introduction -->
	<TextView android:layout_width="wrap_content"
		android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
		android:layout_height="wrap_content" android:text="@string/about_introduce"
		style="@style/normalText" />
	<!-- 宣传口号 -->
	<TextView android:id="@+id/product_slogan"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true" 
		android:layout_marginTop="50dp" android:paddingBottom="10dp"
		android:text="@string/slogan" style="@style/sloganText" />
	<!-- developer -->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/about_developers"
		style="@style/normalText" android:autoLink="web|email"
		android:layout_marginTop="50dp" />

</LinearLayout>
