<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e7e7e7"
    android:orientation="vertical" >

    <!-- Header -->

    <include layout="@layout/header_write" />
    <!-- 选择图片方式 -->

    <LinearLayout
        android:id="@+id/post_button_bar"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/send_message_block"
        android:paddingBottom="0dp"
        android:paddingTop="0dp" >

        <!-- 拍照按钮 -->

        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/toolbar_camera" />
        <!-- 选择图片 -->

        <ImageButton
            android:id="@+id/choose_images_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:src="@drawable/toolbar_media" />
    </LinearLayout>
    <!-- 图片预览 -->

    <ImageView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/mockpic_gray" />
    <!-- 是否为原创 -->

    <CheckBox
        android:id="@+id/isOriginal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isOriginal"
        android:textColor="#FF000000" />
    <!-- 图片标签 -->

    <EditText
        android:id="@+id/tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:hint="@string/tags"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLength="12"
        android:textSize="15dp" />
    <!-- 图片描述, amazing layout_weight attribute! -->

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/description"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:textSize="15dp" />

</LinearLayout>